<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/update_category_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/standart_margin"
        android:text="@string/do_you_want_to_rename_category"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/big_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/update_category_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standart_margin"
        android:layout_marginEnd="@dimen/standart_margin"
        android:hint="@string/enter_new_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_category_title_text_view" />

    <Button
        android:id="@+id/update_category_name_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/standart_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:padding="@dimen/standart_margin"
        android:text="@string/rename"
        android:textAlignment="center"
        android:textColor="@color/colorBlueLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_category_name_edit_text"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>



</androidx.constraintlayout.widget.ConstraintLayout>